// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds \`dataTest\` prop 1`] = `
<Radio
  dataTest="Duck"
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={false}
      className="input"
      data-test="Duck"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#d3d4d5"
          strokeWidth="2"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`adds \`disabled\` attribute 1`] = `
<Radio
  isDisabled={true}
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "default",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={false}
      className="input"
      disabled={true}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#fafafa"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#e9eced"
          strokeWidth="2"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "#d3d4d5",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`applies \`labelPadding\` as padding on the label 1`] = `
<Radio
  labelPadding="10px 20px"
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "10px 20px",
      }
    }
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#d3d4d5"
          strokeWidth="2"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`applies className corresponding to \`radioVerticalAlign\` on the label 1`] = `
<Radio
  name="duck"
  onChange={[MockFunction]}
  radioVerticalAlign="top"
>
  <label
    className="root rootRadioVerticalAlignTop"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#d3d4d5"
          strokeWidth="2"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`if no \`children\` are passed in 1`] = `
<Radio
  id="no-children"
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      id="no-children"
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#d3d4d5"
          strokeWidth="2"
        />
      </g>
    </svg>
  </label>
</Radio>
`;

exports[`is checked when \`isChecked\` is set to true 1`] = `
<Radio
  isChecked={true}
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={true}
      className="input"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#009fd9"
          strokeWidth="2"
        />
        <circle
          cx="10"
          cy="10"
          fill="#009fd9"
          r="6"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`is not checked by default 1`] = `
<Radio
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#d3d4d5"
          strokeWidth="2"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`renders \`children\` passed in 1`] = `
<Radio
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#d3d4d5"
          strokeWidth="2"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`renders \`hasError\` state 1`] = `
<Radio
  hasError={true}
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#ff5a5f"
          strokeWidth="2"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "#ff5a5f",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`renders \`hasError\` state 2`] = `
<Radio
  hasError={true}
  isChecked={true}
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={true}
      className="input"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#ff5a5f"
          strokeWidth="2"
        />
        <circle
          cx="10"
          cy="10"
          fill="#ff5a5f"
          r="6"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "#ff5a5f",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`renders \`input\` within \`label\` 1`] = `
<Radio
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#d3d4d5"
          strokeWidth="2"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;

exports[`renders radio input 1`] = `
<Radio
  name="duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootRadioVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      name="duck"
      onChange={[Function]}
      required={false}
      type="radio"
    />
    <svg
      className="radioImage"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#ffffff"
        fillRule="evenodd"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#d3d4d5"
          strokeWidth="2"
        />
      </g>
    </svg>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Radio>
`;
